# catch2_cmake_project

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  app.cpp
include/project/: lib.hpp
src/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt  test_lib.cpp
